<resources>
    <string name="app_name">VitaCheck</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!-- Strings related to register -->
    <string name="prompt_name">Name</string>
    <string name="prompt_password_confirm">Confirm Password</string>
    <string name="prompt_dob">Date of Birth</string>
    <string name="prompt_weight">Weight</string>
    <string name="title_activity_register">Account Registration</string>

    <!--  Strings related to doctors -->
    <string name="doctor">Doctor</string>
    <string name="name">Name: </string>
    <string name="doctor_type">Type: </string>
    <string name="saved_doctors">Saved Doctors</string>
    <string name="website">Website: </string>
    <string name="edit">Edit</string>
    <string name="add_Doctor">Add Doctor</string>
    <string name="save_changes">Save Changes</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="insurance">Insurance: </string>
    <string name="phone_number">Phone #: </string>
    <string name="email">Email: </string>
    <string name="address">Address: </string>
    <string name="website_link">Website: </string>
    <string name="vist_dates">Visit Dates: </string>
    <string name="title_activity_home">Home</string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_medicine">MedicineActivity</string>
    <string name="title_activity_diet">DietActivity</string>

    <!--  Strings related to vitals -->
    <string name="heart_rate">Heart Rate</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="glucose">Glucose</string>
    <string name="weight">Weight</string>
    <string name="cholesterol">Cholesterol</string>
    <string name="bpm">BPM</string>
    <string name="systolic">systolic</string>
    <string name="diastolic">diastolic</string>
    <string name="mg_dl">mg/dL</string>
    <string name="lbs">lbs</string>
    <string name="kg">kg</string>

</resources>
