<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/name"
            android:id="@+id/doctorSaveName"
            android:padding="8dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/doctorSaveNameField"
            android:layout_weight="1"
            android:maxWidth="20dp"
            android:hint="(Required)" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="396dp"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/doctor_type"
            android:id="@+id/doctorSaveType"
            android:padding="8dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/doctorSaveTypeField"
            android:layout_weight="1"
            android:maxWidth="20dp"
            android:inputType="text"
            android:hint="(optional)" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/insurance"
            android:id="@+id/doctorSaveInsurance"
            android:padding="8dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/doctorSaveInsuranceField"
            android:layout_weight="1"
            android:inputType="text"
            android:maxWidth="20dp"
            android:hint="(optional)" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="373dp"
        android:layout_height="wrap_content"
        android:contextClickable="true"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/phone_number"
            android:id="@+id/doctorSavePhoneNumber"
            android:padding="8dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/doctorSavePhoneNumberField"
            android:layout_weight="1"
            android:maxWidth="20dp"
            android:hint="(optional)" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/email"
            android:id="@+id/doctorSaveEmail"
            android:padding="8dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/doctorSaveEmailField"
            android:layout_weight="1"
            android:maxWidth="20dp"
            android:hint="(optional)" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="396dp"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/address"
            android:id="@+id/doctorSaveAddress"
            android:padding="8dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:ems="10"
            android:id="@+id/doctorSaveAddressField"
            android:layout_weight="1"
            android:maxWidth="20dp"
            android:hint="(optional)" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/website"
            android:id="@+id/doctorSaveWebsite"
            android:padding="8dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/doctorSaveWebsiteField"
            android:layout_weight="1"
            android:inputType="textWebEditText"
            android:maxWidth="20dp"
            android:hint="(optional)" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/vist_dates"
            android:id="@+id/dcotorSaveVistDates"
            android:padding="8dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/doctorSaveVistDateField"
            android:layout_weight="1"
            android:maxWidth="20dp"
            android:hint="(optional)" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.09"
        android:clickable="true"
        android:contextClickable="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/doctorSaveNewDoctorButton"
            android:layout_gravity="right"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

</LinearLayout>